2004-09-13  Murray Cumming  <murrayc@murrayc.com>

	* rninstallation: Remove reference to Desktop and Platform because it 
	now includes the Platform too. It is just GNOME.

2004-09-13  Murray Cumming  <murrayc@murrayc.com>

	* rninstallation: Updated build order, with help from jhbuild 
	list.
	* ../style/db2html.xsl: Change the first include to an import, to fix 
	a problem with the latest libxslt, based on advice from shaunm.

2004-09-13  Murray Cumming  <murrayc@murrayc.com>

	* rnapplications.xml: Mentioned epiphany changes from Marco.

2004-09-13  Murray Cumming  <murrayc@murrayc.com>

	* press_release.sxw: Updated the text for 2.8. We still need the 
	quotes though.

2004-09-13  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-epiphany+preferences.png:
	* rnapplications.xml: Add Epiphany shot

	* rni18n.xml: Fix errors in markup

2004-09-13  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-add-to-panel.png:
	* figures/figure-battstat-applet.png:
	* figures/figure-gnome-system-tools.png:
	* figures/figure-vino-settings.png:
	* figures/figure-weather-report.png: Begin adding figures

	* rnapplets.xml:
	* rnsysadmin.xml: Set locations for figures.

2004-09-10  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Update list of supported and "very close" (75%+)
	languages.

2004-09-09  Murray Cumming  <murrayc@murrayc.com>

	* rnplatform.xml: Mentioned stuff. Seems dull though.

2004-09-09  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml: Mention merging of folders when copying.

2004-09-09  Murray Cumming  <murrayc@murrayc.com>

	* release-notes.xml: Mention Davyd in credits.
	* rndesktop.xml: Uses correct DNS Service Discovery terminology.

2004-09-08  Murray Cumming  <murrayc@murrayc.com>

	* rnsysadmin.xml: Mention new gconf-editor features. 

2004-09-07  Murray Cumming  <murrayc@murrayc.com>

	* rnstandards.xml: Mentioned MIME spec.

2004-09-07  Murray Cumming  <murrayc@murrayc.com>
